--- a/Literatur.bib
+++ b/Literatur.bib
@@ -314,6 +314,14 @@
   url    = {https://kubeedge.io/en/docs/architecture/cloud/edge_controller/},
 }
 
+@WWW{k8s-doc-bigcluster,
+  author = {The Kubernetes Authors},
+  date   = {2021-06-17},
+  editor = {The Kubernetes Authors},
+  title  = {Considerations for large clusters},
+  url    = {https://kubernetes.io/docs/setup/best-practices/cluster-large/},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
